# identity-generator

./: .gitattributes  .gitignore  .prettierrc  README.md  claude.md
backend/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/scripts/: inspect_openai.py  run_identity_tests.py  test_identity_extraction.py  test_llm_response.py  test_structured_output.py
backend/scripts/adalo/: client.py  main.py  models.py  test_email_filter.py  test_identities.py
backend/scripts/coach/: call_to_action_test.py  test_identity_extraction.py  test_openai_logging.py  test_prompt_manager.py
backend/scripts/dalle/: safe_dalle_experiment.py  test_safe_image_service.py
backend/scripts/identity_tests/: __init__.py  api.py  identity_checker.py  main.py  tester.py
backend/scripts/logger/: context_logging_example.py
backend/scripts/openai/: function_calling_example.py
backend/src/discovita/: README.md  app.py  config.py  dependencies.py  models.py
backend/test/: conftest.py
backend/test/db/: test_enum_read_write.py  test_in_memory_db.py  test_sql_db.py  test_state_repository.py  test_state_store.py
backend/test/fixtures/: icons8.py  openai.py
backend/test/icons8/: mock_response.py  test_error_cases.py  test_face_selection.py
backend/test/service_coach/: __init__.py  test_context_builder.py  test_context_models.py  test_identity_processor.py  test_models.py  test_prompt_manager.py  test_service.py  test_state_machine.py
backend/test/service_openai/: README.md  conftest.py  mock_response.py  test_ai_models.py  test_chat_completion.py  test_chat_models.py  test_image_generation.py  test_image_generation_service.py  test_live_integration.py  test_llm_response.py  test_message_creation.py  test_openai_helper.py  test_openai_service.py  test_safe_chat.py  test_service_init.py  test_streaming.py  test_structured_completion.py  test_utils.py  (+3 more)
(+449 files in other folders)
