[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Identity Generator Backend"
authors = ["Discovitas Team"]
readme = "README.md"
packages = [{include = "discovita", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
boto3 = "^1.37.12"
httpx = {extras = ["http2"], version = "^0.28.1"}
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
openai = "^1.66.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
requests = "^2.32.3"
pytest-asyncio = "^0.23.5"
black = "^25.1.0"
pydantic-to-typescript = "^2.0.0"

[tool.pytest.ini_options]
pythonpath = [".", "test"]

# Black formatter configuration
# See https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# Exclude specific files or directories if needed
# extend-exclude = ''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
